// External package imports
import { Injectable } from '@nestjs/common';
import { CircuitBreaker } from 'opossum'; // ^6.0.0
import { Redis } from 'ioredis'; // ^5.0.0
import { Logger } from 'winston'; // ^3.8.0
import { mean, standardDeviation, tTest } from 'simple-statistics'; // ^7.8.0
import * as grpc from '@grpc/grpc-js'; // ^1.8.0

// Internal imports
import { Campaign } from '../models/campaign.model';
import { IMetric, MetricType } from '../../../shared/types/analytics.types';

// Type definitions
interface IPerformanceThresholds {
    minCTR: number;
    minConversionRate: number;
    minROAS: number;
    significanceLevel: number;
}

interface IPlatformOptimizationRules {
    linkedin: {
        minBudgetAdjustment: number;
        maxBudgetAdjustment: number;
        targetingExpansionThreshold: number;
        bidAdjustmentStep: number;
    };
    google: {
        minBudgetAdjustment: number;
        maxBudgetAdjustment: number;
        keywordBidModifier: number;
        qualityScoreThreshold: number;
    };
}

interface OptimizationResult {
    success: boolean;
    changes: OptimizationChange[];
    recommendations: string[];
    confidence: number;
    metrics: Record<MetricType, number>;
}

interface OptimizationChange {
    type: 'budget' | 'targeting' | 'creative' | 'bidding';
    action: string;
    previousValue: any;
    newValue: any;
    confidence: number;
}

interface ABTestResult {
    testId: string;
    winner: string;
    metrics: Record<MetricType, number>;
    confidence: number;
    duration: number;
    sampleSize: number;
}

@Injectable()
export class OptimizationService {
    private readonly _aiClient: grpc.Client;
    private readonly _logger: Logger;
    private readonly _redisCache: Redis;
    private readonly _statsEngine: any;
    private readonly _performanceThresholds: IPerformanceThresholds;
    private readonly _optimizationRules: IPlatformOptimizationRules;
    private readonly _circuitBreaker: CircuitBreaker;

    constructor(
        aiClient: grpc.Client,
        logger: Logger,
        redisCache: Redis,
        statsEngine: any,
        config: any
    ) {
        this._aiClient = aiClient;
        this._logger = logger;
        this._redisCache = redisCache;
        this._statsEngine = statsEngine;

        // Initialize performance thresholds
        this._performanceThresholds = {
            minCTR: 0.02,
            minConversionRate: 0.01,
            minROAS: 2.0,
            significanceLevel: 0.95
        };

        // Initialize platform-specific optimization rules
        this._optimizationRules = {
            linkedin: {
                minBudgetAdjustment: 0.1,
                maxBudgetAdjustment: 0.5,
                targetingExpansionThreshold: 0.8,
                bidAdjustmentStep: 0.15
            },
            google: {
                minBudgetAdjustment: 0.05,
                maxBudgetAdjustment: 0.3,
                keywordBidModifier: 0.2,
                qualityScoreThreshold: 7
            }
        };

        // Initialize circuit breaker for AI service
        this._circuitBreaker = new CircuitBreaker(this._aiClient, {
            timeout: 5000,
            errorThresholdPercentage: 50,
            resetTimeout: 30000
        });
    }

    /**
     * Optimizes campaign performance using AI-driven analysis and recommendations
     */
    public async optimizeCampaign(
        campaignId: string,
        config: { forceOptimize?: boolean; optimizationGoals?: MetricType[] }
    ): Promise<OptimizationResult> {
        try {
            // Check cache for recent optimizations
            const cacheKey = `optimization:${campaignId}`;
            const cachedResult = await this._redisCache.get(cacheKey);
            
            if (cachedResult && !config.forceOptimize) {
                return JSON.parse(cachedResult);
            }

            // Retrieve campaign and validate
            const campaign = await Campaign.findById(campaignId);
            if (!campaign) {
                throw new Error('Campaign not found');
            }

            // Analyze current performance
            const currentMetrics = await this.analyzePerformance(campaign);
            const optimizationNeeded = this.checkOptimizationTriggers(currentMetrics);

            if (!optimizationNeeded && !config.forceOptimize) {
                return {
                    success: true,
                    changes: [],
                    recommendations: [],
                    confidence: 1,
                    metrics: currentMetrics
                };
            }

            // Generate AI recommendations
            const recommendations = await this._circuitBreaker.fire('generateRecommendations', {
                campaign: campaign,
                metrics: currentMetrics,
                goals: config.optimizationGoals
            });

            // Apply optimizations
            const changes = await this.applyOptimizations(campaign, recommendations);

            // Cache results
            const result: OptimizationResult = {
                success: true,
                changes,
                recommendations: recommendations.suggestions,
                confidence: recommendations.confidence,
                metrics: currentMetrics
            };

            await this._redisCache.setex(cacheKey, 3600, JSON.stringify(result));

            return result;
        } catch (error) {
            this._logger.error('Campaign optimization failed', { 
                campaignId, 
                error: error.message 
            });
            throw error;
        }
    }

    /**
     * Manages A/B test execution and analysis
     */
    public async manageABTests(
        campaignId: string,
        testConfig: {
            variants: string[];
            metrics: MetricType[];
            duration: number;
            sampleSize: number;
        }
    ): Promise<ABTestResult> {
        try {
            // Validate test configuration
            if (testConfig.variants.length < 2) {
                throw new Error('At least two variants required for A/B testing');
            }

            // Initialize test tracking
            const testId = `abtest:${campaignId}:${Date.now()}`;
            await this.initializeABTest(testId, testConfig);

            // Monitor test progress
            const testData = await this.collectTestData(testId, testConfig);

            // Analyze results
            const winner = await this.analyzeTestResults(testData, testConfig);

            // Apply winning variant
            await this.applyWinningVariant(campaignId, winner);

            return {
                testId,
                winner: winner.variantId,
                metrics: winner.metrics,
                confidence: winner.confidence,
                duration: testConfig.duration,
                sampleSize: testData.sampleSize
            };
        } catch (error) {
            this._logger.error('A/B test management failed', { 
                campaignId, 
                error: error.message 
            });
            throw error;
        }
    }

    /**
     * Generates AI-powered optimization recommendations
     */
    public async generateRecommendations(
        analytics: IMetric[],
        campaign: Campaign,
        context: { platform: string; objective: string }
    ): Promise<string[]> {
        try {
            // Analyze performance trends
            const trends = await this.analyzePerformanceTrends(analytics);

            // Generate platform-specific recommendations
            const platformRules = this._optimizationRules[context.platform.toLowerCase()];
            const recommendations = await this._circuitBreaker.fire('getOptimizationRecommendations', {
                trends,
                campaign,
                rules: platformRules,
                context
            });

            // Validate and prioritize recommendations
            return this.prioritizeRecommendations(recommendations, trends);
        } catch (error) {
            this._logger.error('Recommendation generation failed', { error: error.message });
            throw error;
        }
    }

    // Private helper methods
    private async analyzePerformance(campaign: Campaign): Promise<Record<MetricType, number>> {
        // Implementation for performance analysis
        return {};
    }

    private checkOptimizationTriggers(metrics: Record<MetricType, number>): boolean {
        // Implementation for optimization trigger checks
        return true;
    }

    private async applyOptimizations(
        campaign: Campaign,
        recommendations: any
    ): Promise<OptimizationChange[]> {
        // Implementation for applying optimizations
        return [];
    }

    private async initializeABTest(testId: string, config: any): Promise<void> {
        // Implementation for A/B test initialization
    }

    private async collectTestData(testId: string, config: any): Promise<any> {
        // Implementation for test data collection
        return {};
    }

    private async analyzeTestResults(testData: any, config: any): Promise<any> {
        // Implementation for test results analysis
        return {};
    }

    private async applyWinningVariant(campaignId: string, winner: any): Promise<void> {
        // Implementation for applying winning variant
    }

    private async analyzePerformanceTrends(analytics: IMetric[]): Promise<any> {
        // Implementation for performance trend analysis
        return {};
    }

    private prioritizeRecommendations(recommendations: any[], trends: any): string[] {
        // Implementation for recommendation prioritization
        return [];
    }
}